--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "nodemon": "^1.11.0",
     "gulp-install": "^1.1.0",
     "gulp-sourcemaps": "^2.6.4"
+  },
+  "dependencies": {
+    "idb": "^2.1.1"
   }
 }
