--- a/package.json
+++ b/package.json
@@ -17,21 +17,31 @@
   },
   "homepage": "https://github.com/Chalecoslovaco/mws-restaurant-stage-1#readme",
   "devDependencies": {
-    "gulp": "^3.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-concat": "^2.6.1",
+    "gulp-install": "^1.1.0",
     "gulp-jshint": "^2.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-webp": "^3.0.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
-    "nodemon": "^1.11.0",
-    "gulp-install": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.4"
+    "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "idb": "^2.1.1"
+    "babel": "^6.23.0",
+    "idb": "^2.1.1",
+    "imagemin": "^5.3.1",
+    "imagemin-webp": "^4.1.0"
   }
 }
