--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-util": "^3.0.8",
     "gulp-imagemin": "^4.1.0",
     "gulp-webp": "^3.0.0",
+    "gulp-htmlmin": "^4.0.0",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "nodemon": "^1.11.0"
